# NipponPulse_GUI_Test

./: README.md
App/: CMakeLists.txt  Main.qml  main.cpp
App/Components/: SliderInput.qml
App/Src/: hid_commander.cpp  hid_commander.h  hid_commander_commands.h
App/Views/: HID_Commander.qml
Docs/: FeatureList.md
